source/datahub/main/default/objects/ExternalId__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External IDs</relationshipLabel>
    <relationshipName>ExternalIDs</relationshipName>
    <type>Lookup</type>
</CustomField>