source/datahub/main/default/objects/ExternalId__c/fields/ExternalSystemId__c.field-meta.xml
<CustomField>
    <fullName>ExternalSystemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External System Name</label>
    <referenceTo>ExternalSystem__c</referenceTo>
    <relationshipName>ExternalIds</relationshipName>
    <type>Lookup</type>
</CustomField>