source/datahub/main/default/objects/ExternalId__c/fields/RelatedSalesforceInternalIdUrl__c.field-meta.xml
<CustomField>
    <fullName>RelatedSalesforceInternalIdUrl__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; RelatedSalesforceInternalId__c,  RelatedSalesforceInternalId__c, &quot;_self&quot;)</formula>
    <label>Related Salesforce Internal ID Url</label>
    <type>Text</type>
</CustomField>