source/datahub/main/default/objects/ExternalId__c/validationRules/ExternalSystemIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ExternalSystemIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Id__c )), ISBLANK( ExternalSystemId__c  ))</errorConditionFormula>
    <errorDisplayField>ExternalSystemId__c</errorDisplayField>
    <errorMessage>Ensure the External System for the External ID is filled in.</errorMessage>
</ValidationRule>